Interface was 50% implmented.

--- a/src/app/nav.bar/nav.bar.component.html
+++ b/src/app/nav.bar/nav.bar.component.html
@@ -1,3 +1,5 @@
-<p>
-  nav.bar works!
-</p>
+<div class = "nav-bar">
+  <div class = "nav-bar-system-name">
+    Truth Table of The Truth
+  </div>
+</div>
