--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<app-nav-bar></app-nav-bar>
-<app-side-bar></app-side-bar>
-<app-body></app-body>
-
+<div class = "app-nav-bar">
+  <app-nav-bar></app-nav-bar>
+</div>
+<div class = "app-side-bar">
+  <app-side-bar></app-side-bar>
+</div>
+<div class = "app-body">
+  <router-outlet></router-outlet>
+</div>
