--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <div class = "home">
   Welcome to this application =) <br>
-  TruthTableOfTheTruth is a application to resolve logic expressions using MCCluskey theorem.
+  TruthTableOfTheTruth is an application to resolve logic expressions using MCCluskey theorem.
 </div>
