--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,16 @@
 <div class = "home">
-  Welcome to this application =) <br>
-  TruthTableOfTheTruth is an application to resolve logic expressions using MCCluskey theorem.
+  <div class = "home-text">
+    Welcome to this application =) <br>
+    TruthTableOfTheTruth is an application to resolve logic expressions using MCCluskey theorem.
+  </div>
+  <div class = "home-gradle" (click) = "feature( 'truth' )">
+    <div class = "home-card">
+      <div class = "home-card-body">
+        <span class = "fa fa-microchip"></span>
+      </div>
+      <div class = "home-card-info">
+        Simplify with Mc Closkey
+      </div>
+    </div>
+  </div>
 </div>
