--- a/src/app/side.bar/side.bar.component.scss
+++ b/src/app/side.bar/side.bar.component.scss
@@ -1,7 +1,7 @@
 .side-bar {
     float: left;
-    height: 100%;
-    width: 100%;
+    height: calc(100% - 110px);
+    width: 200px;
     padding-top:50px;
     font-family: Verdana, Helvetica;
 }
@@ -14,7 +14,7 @@
     color: rgba(255, 255, 255, 0.8);
     text-align: left;
     font-size: 14px;
-    padding-left: 35px;
+    padding-left: 20px;
     cursor: pointer;
     border: none;
     box-shadow: none;
@@ -23,4 +23,13 @@
 
 .side-bar-option-active {
     border-left: 3px solid rgba(255, 45, 0, 1);
+}
+
+.side-bar-option-active > span {
+    color: rgba(255, 45, 0, 1);
+}
+
+.side-bar-span {
+    font-size: 18px;
+    padding-right: 10px;
 }
