--- a/src/app/truth/truth.component.scss
+++ b/src/app/truth/truth.component.scss
@@ -1,11 +1,46 @@
 .truth {
     float: left;
-    width: 100%;
-    height: 100%;
+    width: calc(100% - 300px);
+    height: calc(100% - 180px);
     padding: 50px;
     padding-top: 70px;
     font-size: 18px;
     color: rgba(255, 255, 255, 0.8);
     font-family: Verdana, Helvetica;
     font-weight: normal;
+}
+.truth-options {
+    float: left;
+    margin-left: calc(50vw - 450px);
+    margin-top: calc(50vh - 250px);
+    width: 500px;
+    height: 300px;
+}
+.card {
+    float: left;
+    width: 200px;
+    height: 200px;
+    margin-left: 10px;
+    margin-right: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    cursor: pointer;
+}
+.card:hover {
+    text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.5);
+}
+.card-header{
+    float: left;
+    text-align: center;
+    width: 100%;
+    height: 150px;
+    font-size: 80px;
+    line-height: 150px;
+}
+.card-info{
+    float: left;
+    text-align: center;
+    width: 100%;
+    height: 20px;
+    font-size: 14px;
 }
