--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,15 @@
+$fa-font-path: "../node_modules/font-awesome/fonts";
+@import "../node_modules/font-awesome/scss/font-awesome.scss";
+
 html, body {
     float: left;
     padding: 0px !important;
     margin: 0px !important;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 1, 22, 0.7);
+    min-width: 880px  !important;
+    min-height: 740px !important;
 }
 
 @font-face {
