--- a/src/app/nav.bar/nav.bar.component.html
+++ b/src/app/nav.bar/nav.bar.component.html
@@ -1,5 +1,8 @@
 <div class = "nav-bar">
   <div class = "nav-bar-system-name">
-    Truth Table of The Truth
+    Truth Table of The Truth 
+  </div>
+  <div class = "nav-bar-system-version">
+    {{ version }}
   </div>
 </div>
