--- a/src/app/truth/truth.component.scss
+++ b/src/app/truth/truth.component.scss
@@ -11,12 +11,12 @@
 .truth-header {
     float: left;
     width: 100%;
-    height: 100px;
+    height: 25px;
 }
 .truth-container {
     float: left;
     width: 100%;
-    height: calc( 100% - 100px);
+    height: calc( 100% - 25px);
 }
 
 .truth-option-right {
@@ -35,7 +35,7 @@
 .truth-info {
     float: left;
     width: 100%;
-    height: 50px;
+    height: 24px;
     font-size: 12px;
     color:rgba(245, 182, 10, 0.8);
 }
@@ -43,9 +43,11 @@
 .truth-body {
     float: left;
     width: 100%;
-    min-height:200px;
+    min-height: 200px;
+    height: calc( 100% );
     font-size: 12px;
     color:rgba(255, 255, 255, 0.8);
+    padding-top: 10px
 }
 
 .truth-error {
