--- a/src/app/truth/truth.table/truth.table.component.scss
+++ b/src/app/truth/truth.table/truth.table.component.scss
@@ -1,33 +1,47 @@
 @import "../truth.component.scss";
-
+.truth-table {
+    float: left;
+    height: 100%;
+    width: 100%;
+}
 .truth-table-row {
     float: left;
     position: relative;
-    width: auto;
-    height: auto;;
+    width: 100%;
+    min-height: 50px;
+    height: auto;
+}
+.truth-table-row-scrollable {
+    height: calc(100% - 30px);
+    overflow-y: auto;
+    width: 100%;
 }
 
 .truth-table-column {
     float: left;
     position: relative;
     width: 50px;
-    height: 50px;
+    min-height: 50px;
     text-align: center;
     line-height: 50px;
-    border-bottom: 1px dashed rgba(255, 255, 255, 0.8);
     border-right: 1px dashed rgba(255, 255, 255, 0.8);
+    border-bottom: 1px dashed rgba(255, 255, 255, 0.8);
     cursor: text;
 }
 
+.truth-table-column-header {
+    border-bottom: 1px solid rgba(11, 206, 53, 0.932);
+    border-right: 1px solid rgba(11, 206, 53, 0.932);
+}
 .truth-table-add {
     float: left;
     position: relative;
-    width: 70px;
+    width: 140px;
     height: 50px;
+    padding-left: 10px;
 }
 .add-button {
     float: left;
-    margin-left: 10px;
     width: 50px;
     height: 50px;
     text-align: center;
@@ -107,4 +121,14 @@
 
 .truth-edit:hover {
     color: rgba(11, 206, 53, 0.932);
+}
+.truth-input-header {
+    font-weight: bold;
+    cursor: pointer;
+    line-height: 20px;
+    height: 40px;
+    color: rgba(11, 206, 53, 0.932);
+}
+.truth-input-header:hover {
+    text-shadow: 0px 0px 25px rgba(255, 255, 255, 0.8);
 }
