--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,18 @@
-<div class = "home">
-  <div class = "home-text">
-    Welcome to this application =) <br>
-    TruthTableOfTheTruth is an application to resolve logic expressions using MCCluskey theorem.
-  </div>
-  <div class = "home-gradle" (click) = "feature( 'truth' )">
-    <div class = "home-card">
-      <div class = "home-card-body">
-        <span class = "fa fa-microchip"></span>
-      </div>
-      <div class = "home-card-info">
-        Simplify with Mc Closkey
+<div class = "ui-container">
+  <div class = "home">
+    <div class = "home-text">
+      Welcome to this application =) <br>
+      TruthTableOfTheTruth is an application to resolve logic expressions using MCCluskey theorem.
+    </div>
+    <div class = "home-gradle" (click) = "feature( 'truth' )">
+      <div class = "home-card">
+        <div class = "home-card-body">
+          <span class = "fa fa-microchip"></span>
+        </div>
+        <div class = "home-card-info">
+          Simplify with Mc Closkey
+        </div>
       </div>
     </div>
   </div>
-</div>
+  </div>
