--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,9 +5,8 @@ html, body {
     float: left;
     padding: 0px !important;
     margin: 0px !important;
-    height: 100vh;
-    width: 100vw;
-    background: rgba(0, 1, 22, 0.7);
+    height: 100%;
+    width: 100%;
     min-width: 880px  !important;
     min-height: 740px !important;
 }
