--- a/src/app/nav.bar/nav.bar.component.scss
+++ b/src/app/nav.bar/nav.bar.component.scss
@@ -1,7 +1,11 @@
+@import "../app.component.scss";
+
 .nav-bar {
     float: left;
     width: 100%;
     height: 60px;
+    background: $nav-bar-background;
+    box-shadow: 0px 0px 7px 2px $nav-bar-boxshadow;
 }
 
 .nav-bar-system-name {
@@ -12,7 +16,8 @@
     text-align: center;
     font-size: 20px;
     line-height: 60px;
-    color: rgba(255, 45, 0, 1);
+    color: $text-color-label;
+    font-weight: bold;
     font-family: Verdana;
 }
 
@@ -22,7 +27,7 @@
     height: 100%;
     padding-left: 10px;
     padding-top: 7px;
-    color: rgb(0, 81, 255);
+    color: $version-color;
     font-family: paradise;
     line-height: 50px;
     font-size: 20px;
