--- a/src/app/truth/truth.table/truth.table.component.html
+++ b/src/app/truth/truth.table/truth.table.component.html
@@ -34,16 +34,16 @@
             {{ binary }}
           </div>
         </div>
-        <div class = "truth-table-column" style = "width:150px; border:none;"> 
-          <div class = "truth-table-row" style = "border:none" *ngFor = "let binary of binaries | async">
-            <div class = "truth-table-column" style = "width:50px;">
+        <div class = "truth-table-column" style = "width:150px; border:none; height:auto;"> 
+          <div class = "truth-table-row" style = "border:none;" *ngFor = "let binary of binaries | async">
+            <div class = "truth-table-column" style = "width:50px; height: 51px;">
               <div class = "truth-table-row" style = "border-bottom: 1px dashed rgba(255, 255, 255, 0.8)">
                 <input class = "truth-input truth-input-header" type = "text"  [value] = "binary.number" (keyup.enter)="resultEdit($event, binary)" (focusout) = "resultEdit($event, binary)">
               </div>
             </div>
-            <div *ngIf = "binary.expression != ''" class = "truth-table-column" style = "width:auto; border:none; margin-left: 15px; color: rgba(11, 206, 53, 0.932);">
+            <div *ngIf = "binary.expression != ''" class = "truth-table-column truth-table-expression">
               <div class = "truth-table-row" style = "border: none">
-                <span class = "fa fa-chevron-right"></span>  {{ binary.expression }}
+                <span class = "fa fa-chevron-right" style = "font-size: 12px;"></span>  {{ binary.expression }}
               </div>
             </div>
           </div>
