--- a/src/app/truth/truth.home/truth.home.component.scss
+++ b/src/app/truth/truth.home/truth.home.component.scss
@@ -2,8 +2,8 @@
 
 .truth-options {
     float: left;
-    margin-left: calc(50vw - 450px);
-    margin-top: calc(50vh - 250px);
+    margin-left: calc(50% - 400px);
+    margin-top: calc(50% - 650px);
     width: 500px;
     height: 300px;
 }
@@ -18,7 +18,7 @@
     cursor: pointer;
 }
 .card:hover {
-    text-shadow: 0px 0px 15px rgba(255, 255, 255, 0.5);
+    text-shadow: 0px 0px 15px $text-color;
 }
 .card-header{
     float: left;
