--- a/src/app/truth/truth.table/truth.table.component.scss
+++ b/src/app/truth/truth.table/truth.table.component.scss
@@ -26,7 +26,7 @@
     min-height: 50px;
     text-align: center;
     line-height: 50px;
-    border-right: 1px dashed $border-color;
+    border-right: 1px solid $border-color;
     cursor: text;
 }
 
