--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
 $border-color:rgba(255, 255, 255, 0.8);
-$boder-live: rgba(11, 206, 53, 0.932);
+$border-live: rgba(11, 206, 53, 0.932);
 $text-color: rgba(255, 255, 255, 0.8);
 $text-color-alive: rgba(255, 255, 255, 0.4);
 $tooltip-color: rgba(255, 255, 255, 0.8);
@@ -28,6 +28,7 @@ $side-bar-background: rgba(0, 1, 12, 0.8);
 .ui-container {
     float: left;
     background: $container-background;
+    color: $text-color;
     width: calc(100% - 200px);
     height: calc(100% - 60px);
 }
