--- a/src/app/truth/truth.component.scss
+++ b/src/app/truth/truth.component.scss
@@ -1,20 +1,11 @@
 @import "../app.component.scss";
 
-.truth {
-    float: left;
-    width: calc(100%);
-    height: calc(100%);
-    font-size: 18px;
-    color: $text-color;
-    font-family: Verdana, Helvetica;
-    font-weight: normal;
-}
-.truth-header {
+.truth-options {
     float: left;
     width: 100%;
     height: 25px;
     padding-top: 20px;
-
+    font-family: Verdana;
 }
 .truth-container {
     float: left;
@@ -50,7 +41,8 @@
     height: calc( 100% );
     font-size: 12px;
     color: $text-color;
-    padding-top: 10px
+    padding-top: 10px;
+    overflow-y: auto;
 }
 
 .truth-error {
