--- a/src/app/truth/truth.component.scss
+++ b/src/app/truth/truth.component.scss
@@ -36,7 +36,7 @@
 
 .truth-body {
     float: left;
-    width: 100%;
+    width: calc(100% - 50px);
     min-height: 200px;
     height: calc( 100% );
     font-size: 12px;
