--- a/src/app/truth/truth.table/truth.table.component.scss
+++ b/src/app/truth/truth.table/truth.table.component.scss
@@ -4,8 +4,8 @@
 .truth-variables {
     float: left;
     height: auto;
-    width: 50px;
-    margin-top: 50px;
+    width: 52px;
+    padding-top: 40px;
 }
 .truth-expression {
     float: left;
@@ -18,6 +18,7 @@
     float: left;
     height: 50px;
     width: auto;
+    margin-top: -10px;
 }
 .truth-variable-name {
     float: left;
@@ -25,11 +26,13 @@
     width: 50px;
     text-align: center;
     font-size: 14px;
-    font-weight: normal;
+    font-weight: bold;
     line-height: 50px;
-    border-bottom: 1px solid $border-live;
-    border-right: 1px solid $border-live;
-    color: $text-live
+    border-bottom: 1px solid $border-color;
+    border-right: 1px solid $border-color;
+    color: $truth-table-text-color;
+    position: fixed;
+    background: $truth-table-background-color
 }
 .truth-variable-name > span {
     color: $text-color;
@@ -38,6 +41,7 @@
     float: left;
     height: auto;
     width: 50px;
+    padding-top: 40px;
 }
 .truth-variable-value {
     float: left;
@@ -81,7 +85,7 @@
 
 .truth-variable-add {
     float: left;
-    height: 50px;
+    height: auto;
     width: auto;
     text-align: center;
     font-size: 14px;
@@ -89,9 +93,9 @@
     line-height: 50px;
     color: $text-color;
     margin-left: 5px;
+    padding-top: 30px;
 }
 .truth-input-active {
-    color: $text-live;
     width:50px;
 }
 
@@ -128,7 +132,7 @@
     background-color: #555;
     color: $text-color;
     text-align: center;
-    border-radius: 6px;
+    border-radius: 2px;
     padding: 5px 0;
     position: absolute;
     z-index: 1;
@@ -163,8 +167,8 @@
 .truth-remove {
     float: left;
     font-size: 12px;
-    margin-top: -10px;
-    margin-left: -40px;
+    margin-top: -20px;
+    margin-left: -45px;
     cursor: pointer;
 }
 
@@ -182,4 +186,28 @@
 
 .truth-edit:hover {
     color: $edit-color;
+}
+
+
+// The expression executer interface 
+
+.truth-expression-header {
+    float: left;
+    width: 100%;
+    height: 50px;
+    font-weight: bold;
+    line-height: 50px;
+    font-size: 14px; 
+}
+
+.truth-expression-body {
+    float: left;
+    width: 100%;
+    height: calc(100 - 50px);
+}
+.truth-expression-final {
+    float: left;
+    width: 100%;
+    min-height: 50px;
+    font-size: 14px; 
 }
