--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,13 +21,13 @@ $side-bar-item-color-hover: rgba(46, 140, 216, 0.932);
 $version-color: rgba(38, 212, 255, 0.932);
 
 
-$nav-bar-background: rgba(0, 0, 0, 0.9);
+$nav-bar-background: rgb(30, 31, 39);
 $nav-bar-boxshadow:rgba(38, 212, 255, 1);
-$container-background: rgba(0, 1, 12, 0.8);
-$side-bar-background: rgba(0, 1, 12, 0.8);
+$container-background: rgb(30, 31, 39);
+$side-bar-background: rgb(30, 31, 39);
 
 $truth-table-text-color: rgba(255, 255, 255, 0.8);
-$truth-table-background-color: rgba(21, 116, 194, 0.932);
+$truth-table-background-color: rgb(21, 116, 194);
 
 .ui-container {
     float: left;
