--- a/src/app/truth/truth.table/truth.table.component.scss
+++ b/src/app/truth/truth.table/truth.table.component.scss
@@ -5,25 +5,26 @@
     float: left;
     height: auto;
     width: 52px;
-    padding-top: 40px;
 }
 .truth-expression {
     float: left;
     height: auto;
     width: auto;
     padding-left: 20px;
+    margin-top: -25px;
 }
 
 .truth-variables-names {
     float: left;
     height: 50px;
     width: auto;
-    margin-top: -10px;
+    margin-top: 30px;
 }
 .truth-variable-name {
     float: left;
     height: 50px;
     width: 50px;
+    position: fixed;
     text-align: center;
     font-size: 14px;
     font-weight: bold;
@@ -31,8 +32,8 @@
     border-bottom: 1px solid $border-color;
     border-right: 1px solid $border-color;
     color: $truth-table-text-color;
-    position: fixed;
-    background: $truth-table-background-color
+    background: $truth-table-background-color;
+    margin-top: -40px;
 }
 .truth-variable-name > span {
     color: $text-color;
@@ -41,7 +42,7 @@
     float: left;
     height: auto;
     width: 50px;
-    padding-top: 40px;
+    margin-top: 40px;
 }
 .truth-variable-value {
     float: left;
@@ -93,7 +94,7 @@
     line-height: 50px;
     color: $text-color;
     margin-left: 5px;
-    padding-top: 30px;
+    margin-top: -10px;
 }
 .truth-input-active {
     width:50px;
